--- a/index.html
+++ b/index.html
@@ -15,13 +15,64 @@
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Contact us</a></li>
+                <li><a href="">Contact</a></li>
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
+        <div class="hero-title-section">
+            <div class="hero-info">
+                <h1>Brand New<br>Group of Architects</h1>
+                <p class="text-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="photo">
+        </div>
     </header>
     <main>
-
+        <section>
+            <div class="feature-container">
+                <div class="feature-img">
+                    <img src="images/team1.png" alt="photo">
+                    <img src="images/team2.png" alt="photo">
+                    <img src="images/team3.png" alt="photo">
+                    <img src="images/team4.png" alt="photo">
+                </div>
+                <div class="feature-content">
+                    <h2><span class="text-description">Quick list</span> of Our<br><span class="feature-color">Features</span></h2>
+                    <p class="text-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="love-container">
+                <div class="love-content">
+                    <div class="love-title">
+                        <h4>Features you will<br>love & enjoy</h4>
+                    </div>
+                    <p class="text-description">There are many variations of passages of Lorem Ipsum available, but the<br>majority have suffered alteration in some form, by injected humour, or<br>randomised words which don't look even</p>
+                    <div class="love-info">
+                        <h4>Dexktop & Mobile Version</h4>
+                        <p class="text-description">There are many variations of passages of Lorem Ipsum available,<br>but the majority have suffered alteration in some form, by injected humour, or<br>randomised...........</p>
+                    </div>
+                    <div class="love-info">
+                        <h4>Dexktop & Mobile Version</h4>
+                        <p class="text-description">There are many variations of passages of Lorem Ipsum available<br>but the majority have suffered alteration in some form, by injected humour,or <br>randomised...........</p>
+                    </div>
+                    <div class="love-info">
+                        <h4>Dexktop & Mobile Version</h4>
+                        <p class="text-description">There are many variations of passages of Lorem Ipsum available,<br>but the majority have suffered alteration in some form, by injected humour,or<br>randomised...........</p>
+                    </div>
+                    <div class="love-info">
+                        <h4>Dexktop & Mobile Version</h4>
+                        <p class="text-description">There are many variations of passages of Lorem Ipsum available, br but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div class="love-img">
+                    <img src="images/architect.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
