added the facts section

--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                     <p class="text-description">There are many variations of passages of Lorem Ipsum available, but the<br>majority have suffered alteration in some form, by injected humour, or<br>randomised words which don't look even</p>
                     <div class="love-info">
                         <h4>Dexktop & Mobile Version</h4>
-                        <p class="text-description">There are many variations of passages of Lorem Ipsum available,<br>but the majority have suffered alteration in some form, by injected humour, or<br>randomised...........</p>
+                        <p class="text-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                     </div>
                     <div class="love-info">
                         <h4>Dexktop & Mobile Version</h4>
-                        <p class="text-description">There are many variations of passages of Lorem Ipsum available<br>but the majority have suffered alteration in some form, by injected humour,or <br>randomised...........</p>
+                        <p class="text-description">There are many variations of passages of Lorem Ipsum available but the majority have suffered alteration in some form, by injected humour,or  randomised...........</p>
                     </div>
                     <div class="love-info">
                         <h4>Dexktop & Mobile Version</h4>
-                        <p class="text-description">There are many variations of passages of Lorem Ipsum available,<br>but the majority have suffered alteration in some form, by injected humour,or<br>randomised...........</p>
+                        <p class="text-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,or randomised...........</p>
                     </div>
                     <div class="love-info">
                         <h4>Dexktop & Mobile Version</h4>
@@ -70,6 +70,38 @@
                 </div>
                 <div class="love-img">
                     <img src="images/architect.png" alt="">
+                    <div class="ten-year-badge">
+                        <h2>10+Year</h2>
+                        <span>Experience</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="facts-title">
+                <h3>Some Facts</h3>
+                <p class="text-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="facts-container">
+                <div class="facts-box">
+                    <img src="images/icons/ribon.png" alt="image">
+                    <h4>54</h4>
+                    <span class="text-description">Awards Winnings</span>
+                </div>
+                <div class="facts-box">
+                    <img src="images/icons/projects.png" alt="image">
+                    <h4>558</h4>
+                    <span class="text-description">Project Finished</span>
+                </div>
+                <div class="facts-box">
+                    <img src="images/icons/customers.png" alt="image">
+                    <h4>255</h4>
+                    <span class="text-description">Clients Worked</span>
+                </div>
+                <div class="facts-box">
+                    <img src="images/icons/email.png" alt="image">
+                    <h4>2250</h4>
+                    <span class="text-description">Email Send</span>
                 </div>
             </div>
         </section>
