--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <section>
             <div class="facts-title">
                 <h3>Some Facts</h3>
-                <p class="text-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <p class="text-description">There are many variations of passages of Lorem Ipsum available, but<br>the majority have suffered alteration.</p>
             </div>
             <div class="facts-container">
                 <div class="facts-box">
@@ -105,9 +105,24 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="sponser-title">
+                <h3>Our Sponspors</h3>
+                <p class="text-description">There are many variations of passages of Lorem Ipsum available, but<br>the majority have suffered alteration.</p>
+            </div>
+            <div class="sponser-container">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="copy-right">
+            <p>&copy; 2023 all right reserves by Helal</p>
+        </div>
     </footer>
 </body>
 </html>
